2015-01-28  Stipe Tolj  <stolj at kannel.org>
    * gw/smscconn.c: fixing bug #708 in function c:smscconn_usable(). We need
      to bail out for connectioks with status SMSCCONN_ACTIVE_RECV, since those
      can't be used for routing. Some source code reformating, NLC.
      
2015-01-19 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smpp_pdu.[ch], gw/smsc/smsc_smpp.c, gwlib/cfg.def:
      added new PDU dump function that allow to dump in one line instead of multiline,
      for better parsing. It can be switched with new log-format configuration option.

2015-01-02  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/http/generic.c: fix segfault when starting without specific
      configuration directives for this type.
      
2014-12-19  Stipe Tolj  <stolj at kannel.org>
    * gw/sms.c: add a TODO note in function extract_msgdata_part_by_coding()
      that yields a GSM centric limitation in regards of character encoding
      support. NLC.
    * gw/smsc/smsc_smpp.c: use DCS handling functions to reduce code redundancy
      on the MO side, and also support individual data_coding setting via
      meta-data value.
       
2014-12-18  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide.xml: cleaning section "Fake messages" to include all types.
    * gw/smsc/smsc_fake.c: add support for UDH + 7bit text, using types udh-data
      and udh-text now.
    * test/fakesmsc.c: adding reference for udh-data and udh-text types.
    
2014-12-18  Stipe Tolj  <stolj at kannel.org>
    * test/fakesmsc.c: add missing usage output for type 'dlr-mask'.
    
2014-11-17  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document the new graceful restarting.
    * gw/bb_http.c: add new HTTP admin URI /graceful-restart.
    * gw/bb_smscconn.c: implements graceful restarting of bearerbox.
    * gw/bearebox.[ch]: signal SIGHUP handling for graceful restarting, and 
      SIGUSR2 for pure log re-opening.